--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="style.css"></link>
-    </head>
-    <body>
-<h1>Title</h1>
-
-    </body>
- <script src="script.js"></script>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<header>
+<h1 id="heading">Kester Jones</h1>
+<div id="menuButton" onmouseover="lighten()" onmouseout="darken()" onclick="turnCross()"> 
+<div id="one"><pre> </pre>
+</div>
+<div id="two"><pre> </pre>
+</div>
+<div id="three"><pre> </pre>
+</div>
+</div>
+</header>
+<h2 id="title">ABOUT</h2>
+<p id="writing">ibfoihwbv iljwoiewrot beohbesr bsoiv idjv sdvb dshbv dshbfg sehbrf szbdf oisbdvi boivub sifb sehbf shdbioes bife is ifbaw hsbfhb ufhsbdhbfhab owhbfo boeui fosbf shb shdbf hbf sebf aubf aweb foiweuhf owue r o hu ose siuf sierb lisuh to iwauayf busybf awhroiwauher liaw oahbvuayb aoruygzus hgliwzhtoiuhwaeri weagt gria ayr turey gfuyre gf aeuf bskf bskeuf kseu kreuyg rukywag rkuywage fkuywaebkuf ysfku kauywge uyre kfayrbfku abkru geawury bwaeu ybaweuy baeuk yebak fua bwku yab euygrkuey grauywerg akuyer gauyegr aiwuyerg kauyegr awher uawyegr uyewagr kuywaegr kuewag rkuyag ewku yrgaweuyrg eaurg kuegr awuyerg kuyewr gkauyeg ruwaeruyaw gekuyrgwaekuyr agwe uyagewk tuyawgeu yageor uyagie ruyageit uyagekruyagwit yuageu gruygerku yagewuy rguaesygr uayeg uisygetuy gruyagt uyawg uraygwiuyer gisageauweyrg auyer gauyewr iauywg riuyewruayg riuwagu</p>
+<div id="right"><pre> </pre></div>
+<div id="left"></div>
+<div id="menu">
+<a class="buttons">DEMO REEL</a>
+<br>
+<a class="buttons">FACES</a>
+<br>
+<a class="buttons">ABOUT</a>
+<br>
+<a class="buttons">CONTACT</a>
+</div>
+<script src="script.js"></script>
+</body>
 </html>
