--- a/project-gallery.html
+++ b/project-gallery.html
@@ -16,9 +16,34 @@
 </div>
 </header>
 <h2 id="title">PROJECT GALLERY</h2>
-<p id="writing">ibfoihwbv iljwoiewrot beohbesr bsoiv idjv sdvb dshbv dshbfg sehbrf szbdf oisbdvi boivub sifb sehbf shdbioes bife is ifbaw hsbfhb ufhsbdhbfhab owhbfo boeui fosbf shb shdbf hbf sebf aubf aweb foiweuhf owue r o hu ose siuf sierb lisuh to iwauayf busybf awhroiwauher liaw oahbvuayb aoruygzus hgliwzhtoiuhwaeri weagt gria ayr turey gfuyre gf aeuf bskf bskeuf kseu kreuyg rukywag rkuywage fkuywaebkuf ysfku kauywge uyre kfayrbfku abkru geawury bwaeu ybaweuy baeuk yebak fua bwku yab euygrkuey grauywerg akuyer gauyegr aiwuyerg kauyegr awher uawyegr uyewagr kuywaegr kuewag rkuyag ewku yrgaweuyrg eaurg kuegr awuyerg kuyewr gkauyeg ruwaeruyaw gekuyrgwaekuyr agwe uyagewk tuyawgeu yageor uyagie ruyageit uyagekruyagwit yuageu gruygerku yagewuy rguaesygr uayeg uisygetuy gruyagt uyawg uraygwiuyer gisageauweyrg auyer gauyewr iauywg riuyewruayg riuwagu</p>
-<div id="right"><pre> </pre></div>
+<p id="writing">Click on the images to interract with the projects!</p>
+
+<div id="container">
+<img src="" alt="Tip Calculator">
+<img src="" alt="Lolcat Clock">
+<img src="" alt="Burly Herd">
+<img src="" alt="Hello User">
+<img src="" alt="What Type">
+<img src="" alt="Check Length">
+<img src="" alt="Sum of Two Numbers">
+<img src="" alt="Add and Multiply">
+<img src="" alt="Return Larger">
+<img src="" alt="Sum of Elements">
+<img src="" alt="Squaring a Number">
+<img src="" alt="Odd or Even">
+<img src="" alt="Sum of Positive">
+<img src="" alt="Password Creator">
+<img src="" alt="Filter or Reduce">
+<img src="" alt="Odd or Even">
+
+
+
+</div>
+
+<div id="right"></div>
 <div id="left"></div>
+
+
 <div id="menu">
 <a class="buttons" href="javascript:delay('project-gallery.html')" onclick="linkClick()" onmouseover="brighten(gallery)" onmouseout="unbrighten(gallery)" id="gallery">GALLERY</a>
 <br>
