added deck of cards which shows random card

--- a/feature.html
+++ b/feature.html
@@ -17,8 +17,14 @@
 </header>
 <br>
 <h2 id="title">FEATURE</h2>
-<p id="writing">ibfoihwbv iljwoiewrot beohbesr bsoiv idjv sdvb dshbv dshbfg sehbrf szbdf oisbdvi boivub sifb sehbf shdbioes bife is ifbaw hsbfhb ufhsbdhbfhab owhbfo boeui fosbf shb shdbf hbf sebf aubf aweb foiweuhf owue r o hu ose siuf sierb lisuh to iwauayf busybf awhroiwauher liaw oahbvuayb aoruygzus hgliwzhtoiuhwaeri weagt gria ayr turey gfuyre gf aeuf bskf bskeuf kseu kreuyg rukywag rkuywage fkuywaebkuf ysfku kauywge uyre kfayrbfku abkru geawury bwaeu ybaweuy baeuk yebak fua bwku yab euygrkuey grauywerg akuyer gauyegr aiwuyerg kauyegr awher uawyegr uyewagr kuywaegr kuewag rkuyag ewku yrgaweuyrg eaurg kuegr awuyerg kuyewr gkauyeg ruwaeruyaw gekuyrgwaekuyr agwe uyagewk tuyawgeu yageor uyagie ruyageit uyagekruyagwit yuageu gruygerku yagewuy rguaesygr uayeg uisygetuy gruyagt uyawg uraygwiuyer gisageauweyrg auyer gauyewr iauywg riuyewruayg riuwagu</p>
-
+<p id="writing">Welcome to my feature! Here we have a deck of cards. It can be used to work out strategies for card games or solve maths problems involving cards. You can add or remove cards and see the likelihood of drawing any particular card with what is left. Enjoy!</p>
+<div id="cardBox">
+    <img id="deckBack" src="img/back.jpg" alt="Deck of cards">
+    <img id="back" src="img/back.jpg" alt="Back of card">
+    <img id="card" alt="Card">
+</div>
+<br>
+<button onclick="showCard()">Show Card</button>
 
 <div id="right"></div>
 <div id="left"></div>
