--- a/feature.html
+++ b/feature.html
@@ -24,7 +24,7 @@
     <img id="card" alt="Card">
 </div>
 <br>
-<button onclick="showCard()">Show Card</button>
+<button onclick="delayShowCard()">Show Card</button>
 
 <div id="right"></div>
 <div id="left"></div>
