nearly sorted about page

--- a/feature.html
+++ b/feature.html
@@ -24,7 +24,12 @@
     <img id="card" alt="Card">
 </div>
 <br>
+
+<button onclick="shuffle()">Shuffle Deck</button>
+<br>
 <button onclick="delayShowCard()">Show Card</button>
+<br>
+<button onclick="hideCard()">Hide Card</button>
 
 <div id="right"></div>
 <div id="left"></div>
@@ -44,3 +49,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
+
