--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
 </div>
 </header>
 <br>
-<article>
+
+<div id="articleBox">
+
+<article id="article">
 <h2 id="title">ABOUT</h2>
 <p id="writing">The Founders and Coders course is exciting to me in many ways. I am 
   enthusiastically pursuing a career in the tech industry and the curriculum looks incredibly well thought
    out and thorough. A friend of mine has completed your course and recommended it highly. Also, I am 
    very interested in the level 4 software development apprenticeship. It looks like an excellent opportunity
     and a perfect way to kickstart my new career.</p>
-<p>Finally, and most importantly, I am extremely encouraged by your goal to make the tech industry more diverse, 
+<p id="writing2">Finally, and most importantly, I am extremely encouraged by your goal to make the tech industry more diverse, 
   inclusive and collaborative. I have looked at several other courses and the main selling point that they all 
   highlight is the potential salary however I believe there are more important things in life. I view tech
    as the most important industry in shaping the future of society and how we relate to work, the world, and 
@@ -34,11 +37,10 @@
 I grew up in a forward thinking, political household and was attending protests from when I was a child. I studied politics at
      university because I wanted to educate myself enough on these issues to make sure I was on the right side of
       history so I could be a part of the solution and not part of the problem. The more I learned, the more
-      I learned there was to do in using my position of privilege to support those without it
-
-
-. Although there is always more to learn, I have tried to embark on the lifelong journey of being
-       a good ally.
+      I learned there was to do in using my position of privilege to support those without it.
+</p>
+<p id="writing3">
+Although there is always more to learn, I have tried to embark on the lifelong journey of being a good ally.
 Through attending the BLM protests and having conversations with friends in their wake, I learned a lot
  about the structural issues still facing so many people today. Discussions with friends during the Me Too
   movement were very enlightening. Growing up with an feminist, activist, lesbian mother, an awareness of
@@ -48,7 +50,8 @@ Through attending the BLM protests and having conversations with friends in thei
      incorporate these lessons into all my future work. 
 I have learned that what it takes to be a good ally is listening, helping to build power in disadvantaged
         communities, and playing a supporting role, rather than trying to use my own power to solve problems for others.
-
+</p>
+<p id="writing4">
    Technology has the power to isolate us but also the power to bring us together. One of the reasons that I
     want to learn to code is to pursue my idea for a platform which will be a place for cooperatively run,
      ethical businesses to find each other, make business connections, and trade.  I would include an 
@@ -67,12 +70,17 @@ I have learned that what it takes to be a good ally is listening, helping to bui
       It would be a privilege to start my journey into coding with a course that takes these matters 
       seriously and be among a collection of like-minded people so we can share ideas about how to 
       improve the teach industry and make the world a better place.</p>
-</p>
      
-     
+</article>
+<div id="clicker">
+<button id="previous" onclick="previous()">Previous</button><p id="para" style="display: inline">1/4</p><button id="next" onclick="next()">Next</button>
+</div>
+<br>
 <p>Here is the link to my freeCodeCamp profile:</p>
 <a href="https://www.freecodecamp.org/KesterJJ" target="_blank" style="text-decoration: underline;">https://www.freecodecamp.org/KesterJJ</a>
-</article>
+
+</div>
+
 
 <div id="right"></div>
 <div id="left"></div>
