--- a/challenges.html
+++ b/challenges.html
@@ -17,7 +17,76 @@
 </header>
 <br>
 <h2 id="title">CHALLENGES</h2>
-<p id="writing">ibfoihwbv iljwoiewrot beohbesr bsoiv idjv sdvb dshbv dshbfg sehbrf szbdf oisbdvi boivub sifb sehbf shdbioes bife is ifbaw hsbfhb ufhsbdhbfhab owhbfo boeui fosbf shb shdbf hbf sebf aubf aweb foiweuhf owue r o hu ose siuf sierb lisuh to iwauayf busybf awhroiwauher liaw oahbvuayb aoruygzus hgliwzhtoiuhwaeri weagt gria ayr turey gfuyre gf aeuf bskf bskeuf kseu kreuyg rukywag rkuywage fkuywaebkuf ysfku kauywge uyre kfayrbfku abkru geawury bwaeu ybaweuy baeuk yebak fua bwku yab euygrkuey grauywerg akuyer gauyegr aiwuyerg kauyegr awher uawyegr uyewagr kuywaegr kuewag rkuyag ewku yrgaweuyrg eaurg kuegr awuyerg kuyewr gkauyeg ruwaeruyaw gekuyrgwaekuyr agwe uyagewk tuyawgeu yageor uyagie ruyageit uyagekruyagwit yuageu gruygerku yagewuy rguaesygr uayeg uisygetuy gruyagt uyawg uraygwiuyer gisageauweyrg auyer gauyewr iauywg riuyewruayg riuwagu</p>
+<p id="writing">Here are the prompts which are just functions so I have left them as images</p>
+<div id="container">
+    <figure id="add-and-multiply">
+        <figcaption>Add and Multiply</figcaption>
+        <img src="img/add-and-multiply.jpg" alt="Add and Multiply" onclick="runProject(passwordCreator, passW, passWURL)" id="passW">
+       </figure>
+
+    <figure id="capitalise-keys">
+        <figcaption>Capitalise Keys</figcaption>
+    <img src="img/capitalise-keys.jpg" alt="Capitalise Keys" onclick="runProject(numberizor, numB, numBURL)" id="numB">
+    </figure>
+
+    <figure id="check-length">
+        <figcaption>Check Length</figcaption>
+        <img src="img/check-length.jpg" alt="Check Length" onclick="runProject(tipCalculator, tipC, tipCURL)" id="tipC">
+    </figure>
+
+    <figure id="check-type">
+        <figcaption>Check Type</figcaption>
+    <img src="img/check-type.jpg" alt="Check Type" onclick="runProject(lolCat, lolC, lolCURL)" id="lolC">
+    </figure>
+    
+    <figure id="going-shopping">
+            <figcaption>Going Shopping</figcaption>
+            <img src="img/going-shopping.jpg" alt="GOing Shopping">
+    </figure>
+    <figure id="greet-user">
+        <figcaption>Greet User</figcaption>
+        <img src="img/greet-user.jpg" alt="Greet User" onclick="runProject(passwordCreator, passW, passWURL)" id="passW">
+       </figure>
+
+    <figure id="map-object">
+        <figcaption>Map Object</figcaption>
+    <img src="img/map-object.jpg" alt="Map Object" onclick="runProject(numberizor, numB, numBURL)" id="numB">
+    </figure>
+
+    <figure id="odd-or-even">
+        <figcaption>Check if Divisible by 2</figcaption>
+        <img src="img/odd-or-even.jpg" alt="Check if Divisible by 2" onclick="runProject(tipCalculator, tipC, tipCURL)" id="tipC">
+    </figure>
+
+    <figure id="return-larger">
+        <figcaption>Return Larger</figcaption>
+    <img src="img/return-larger.jpg" alt="Return Larger" onclick="runProject(lolCat, lolC, lolCURL)" id="lolC">
+    </figure>
+    
+    <figure id="squaring-a-number">
+            <figcaption>Squaring a Number</figcaption>
+            <img src="img/squaring-a-number.jpg" alt="Squaring a Number">
+    </figure>
+    <figure id="string-to-object">
+        <figcaption>String to Object</figcaption>
+        <img src="img/string-to-object.jpg" alt="String to Object" onclick="runProject(passwordCreator, passW, passWURL)" id="passW">
+       </figure>
+
+    <figure id="sum-of-elements">
+        <figcaption>Sum of Elements</figcaption>
+    <img src="img/sum-of-elements.jpg" alt="Sum of Elements" onclick="runProject(numberizor, numB, numBURL)" id="numB">
+    </figure>
+
+    <figure id="sum-of-positive">
+        <figcaption>Sum of Positive</figcaption>
+        <img src="img/sum-of-positive.jpg" alt="Sum of Positive" onclick="runProject(tipCalculator, tipC, tipCURL)" id="tipC">
+    </figure>
+
+    <figure id="sum-of-two-numbers">
+        <figcaption>Sum of Two Numbers</figcaption>
+    <img src="img/sum-of-two-numbers.jpg" alt="Sum of Two Numbers" onclick="runProject(lolCat, lolC, lolCURL)" id="lolC">
+    </figure>
+</div>
 
 
 <div id="right"></div>
