--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@ I have learned that what it takes to be a good ally is listening, helping to bui
 <br>
 <p>Here is the link to my freeCodeCamp profile:</p>
 <a href="https://www.freecodecamp.org/KesterJJ" target="_blank" style="text-decoration: underline;">https://www.freecodecamp.org/KesterJJ</a>
-
+<br>
+<p>Here is the link to my Github repository:</p>
+<a href="https://github.com/KesterJJ/application-site" target="_blank" style="text-decoration: underline;">https://github.com/KesterJJ/application-site</a>
 </div>
 
 
