ironed out some bugs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   highlight is the potential salary however I believe there are more important things in life. I view tech
    as the most important industry in shaping the future of society and how we relate to work, the world, and 
    each other. For an industry that is supposedly being led by the most progressive generation in history, it 
-   is deeply disheartening to watch it fall into familiar patterns. Although I am a white male, I have
+   is deeply disheartening to watch it fall into familiar patterns. </p>
+   <p id="writing3">Although I am a white male, I have
    worked several gig economy jobs and have been disappointed (although not surprised) that the contractor/workers
     are representative of the culturally diverse London I grew up in, whereas those further up the hierarchy are almost all people who look like me.
 I grew up in a forward thinking, political household and was attending protests from when I was a child. I studied politics at
@@ -39,29 +40,32 @@ I grew up in a forward thinking, political household and was attending protests 
       history so I could be a part of the solution and not part of the problem. The more I learned, the more
       I learned there was to do in using my position of privilege to support those without it.
 </p>
-<p id="writing3">
+
+  <p id="writing4">
 Although there is always more to learn, I have tried to embark on the lifelong journey of being a good ally.
 Through attending the BLM protests and having conversations with friends in their wake, I learned a lot
  about the structural issues still facing so many people today. Discussions with friends during the Me Too
   movement were very enlightening. Growing up with an feminist, activist, lesbian mother, an awareness of
    women’s issues played a major role in the formation of my sense of morality, but it took people speaking
-    up about their personal experience for me to realise just how pervasive these issues are. I think it’s
+    up about their personal experience for me to realise just how pervasive these issues are.</p>
+    <p id="writing5"> I think it’s
      excellent that you are encouraging people to educate themselves about these issues and I plan to 
      incorporate these lessons into all my future work. 
 I have learned that what it takes to be a good ally is listening, helping to build power in disadvantaged
         communities, and playing a supporting role, rather than trying to use my own power to solve problems for others.
 </p>
-<p id="writing4">
+<p id="writing6">
    Technology has the power to isolate us but also the power to bring us together. One of the reasons that I
     want to learn to code is to pursue my idea for a platform which will be a place for cooperatively run,
      ethical businesses to find each other, make business connections, and trade.  I would include an 
      area for supporters, customers, and other community groups to get involved, as well as areas for 
-     organising in support of each other and fundraising for mutual assistance. It will be used for 
-     people It could be used to organise food/necessities distribution, help in the wake of disasters,
+     organising in support of each other and fundraising for mutual assistance. </p>
+       <p id="writing7">It could be used to organise food/necessities distribution, help in the wake of disasters,
       or shelter for the unhoused as some examples. As well as this, disadvantaged groups can use it to 
       crowdsource funds as well as physical help to start new businesses and organisations that can give
        back and elevate the community. Crucially, it will be done in a way that encourages reciprocal 
-       relationships and community sharing and strengthening rather than simply charity.  This will help forge
+       relationships and community sharing and strengthening rather than simply charity.</p>
+       <p id="writing8">  This will help forge
       connections between groups of people who have experience taking an active role in decision making
        in their lives and building strength. The platform itself would be run as
         a cooperative, which would involve me ceding control and personal gain to work towards a better 
@@ -76,11 +80,9 @@ I have learned that what it takes to be a good ally is listening, helping to bui
 <button id="previous" onclick="previous()">Previous</button><p id="para" style="display: inline">1/4</p><button id="next" onclick="next()">Next</button>
 </div>
 <br>
-<p>Here is the link to my freeCodeCamp profile:</p>
-<a href="https://www.freecodecamp.org/KesterJJ" target="_blank" style="text-decoration: underline;">https://www.freecodecamp.org/KesterJJ</a>
-<br>
-<p>Here is the link to my Github repository:</p>
-<a href="https://github.com/KesterJJ/application-site" target="_blank" style="text-decoration: underline;">https://github.com/KesterJJ/application-site</a>
+<footer>
+<p>freeCodeCamp profile: <a href="https://www.freecodecamp.org/KesterJJ" target="_blank" style="text-decoration: underline;">https://www.freecodecamp.org/KesterJJ</a> - - - Github repository: <a href="https://github.com/KesterJJ/application-site" target="_blank" style="text-decoration: underline;">https://github.com/KesterJJ/application-site</a></p>
+</footer>
 </div>
 
 
