--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 </header>
 <br>
 
-<div id="articleBox">
-
-<article id="article">
-<h2 id="title">ABOUT</h2>
-<p id="writing">The Founders and Coders course is exciting to me in many ways. I am 
-  enthusiastically pursuing a career in the tech industry and the curriculum looks incredibly well thought
-   out and thorough. A friend of mine has completed your course and recommended it highly. Also, I am 
-   very interested in the level 4 software development apprenticeship. It looks like an excellent opportunity
-    and a perfect way to kickstart my new career.</p>
-<p id="writing2">Finally, and most importantly, I am extremely encouraged by your goal to make the tech industry more diverse, 
+<div id="container">
+<article id="article"><h2 id="title">ABOUT</h2>
+<p id="writing">I have enjoyed every step of the application process to apply for the course at Founders
+   and Coders. I have learnt and developed my skill set along the way. It's been very exciting to learn and 
+   grow and to feel like this can be more a realistic opportunity. My inspiration to apply for the course
+    was based on the recommendations of a friend who studied at Founders and Coders. I believe it's an
+     incredible opportunity which should be a life changing experience for me and my other peers. I am 
+     excited to work with like-minded individuals, so we can learn from each other. It's highly motivating 
+     to see a coding course combine social issues with the tech industry. Personally, the opportunity to 
+     study on the course not only means a chance for a career change but also a way to make a positive impact 
+     within a dynamic, creative, and ethical environment. The curriculum looks well thought out and thorough 
+     and I can see it has received such high praise.</p>
+<p id="writing2">I am extremely encouraged by your goal to make the tech industry more diverse, 
   inclusive and collaborative. I have looked at several other courses and the main selling point that they all 
   highlight is the potential salary however I believe there are more important things in life. I view tech
    as the most important industry in shaping the future of society and how we relate to work, the world, and 
@@ -77,14 +80,13 @@ I have learned that what it takes to be a good ally is listening, helping to bui
      
 </article>
 <div id="clicker">
-<button id="previous" onclick="previous()">Previous</button><p id="para" style="display: inline">1/4</p><button id="next" onclick="next()">Next</button>
+<button id="previous" onclick="previous()">Previous</button><p id="para" style="display: inline">1/8</p><button id="next" onclick="next()">Next</button>
 </div>
 <br>
 <footer>
 <p>freeCodeCamp profile: <a href="https://www.freecodecamp.org/KesterJJ" target="_blank" style="text-decoration: underline;">https://www.freecodecamp.org/KesterJJ</a> - - - Github repository: <a href="https://github.com/KesterJJ/application-site" target="_blank" style="text-decoration: underline;">https://github.com/KesterJJ/application-site</a></p>
 </footer>
 </div>
-
 
 <div id="right"></div>
 <div id="left"></div>
