--- a/challenges.html
+++ b/challenges.html
@@ -21,70 +21,70 @@
 <div id="container">
     <figure id="add-and-multiply">
         <figcaption>Add and Multiply</figcaption>
-        <img src="img/add-and-multiply.jpg" alt="Add and Multiply" onclick="runProject(addAndMultiply)">
+        <img src="img/add-and-multiply.jpg" alt="Add and Multiply" onclick="runChallenge(addAndMultiply)">
        </figure>
 
     <figure id="capitalise-keys">
         <figcaption>Capitalise Keys</figcaption>
-    <img src="img/capitalise-keys.jpg" alt="Capitalise Keys" onclick="runProject(capitaliseKeys)">
+    <img src="img/capitalise-keys.jpg" alt="Capitalise Keys" onclick="runChallenge(capitaliseKeys)">
     </figure>
 
     <figure id="check-length">
         <figcaption>Check Length</figcaption>
-        <img src="img/check-length.jpg" alt="Check Length" onclick="runProject(checkLength)">
+        <img src="img/check-length.jpg" alt="Check Length" onclick="runChallenge(checkLength)">
     </figure>
 
     <figure id="check-type">
         <figcaption>Check Type</figcaption>
-    <img src="img/check-type.jpg" alt="Check Type" onclick="runProject(checkType)">
+    <img src="img/check-type.jpg" alt="Check Type" onclick="runChallenge(checkType)">
     </figure>
     
     <figure id="going-shopping">
             <figcaption>Going Shopping</figcaption>
-            <img src="img/going-shopping.jpg" alt="Going Shopping" onclick="runProject(goingShopping)">
+            <img src="img/going-shopping.jpg" alt="Going Shopping" onclick="runChallenge(goingShopping)">
     </figure>
     <figure id="greet-user">
         <figcaption>Greet User</figcaption>
-        <img src="img/greet-user.jpg" alt="Greet User" onclick="runProject(greetUser)">
+        <img src="img/greet-user.jpg" alt="Greet User" onclick="runChallenge(greetUser)">
        </figure>
 
     <figure id="map-object">
         <figcaption>Map Object</figcaption>
-    <img src="img/map-object.jpg" alt="Map Object" onclick="runProject(mapObject)">
+    <img src="img/map-object.jpg" alt="Map Object" onclick="runChallenge(mapObject)">
     </figure>
 
     <figure id="odd-or-even">
         <figcaption>Check if Divisible by 2</figcaption>
-        <img src="img/odd-or-even.jpg" alt="Check if Divisible by 2" onclick="runProject(oddOrEven)">
+        <img src="img/odd-or-even.jpg" alt="Check if Divisible by 2" onclick="runChallenge(oddOrEven)">
     </figure>
 
     <figure id="return-larger">
         <figcaption>Return Larger</figcaption>
-    <img src="img/return-larger.jpg" alt="Return Larger" onclick="runProject(returnLarger)">
+    <img src="img/return-larger.jpg" alt="Return Larger" onclick="runChallenge(returnLarger)">
     </figure>
     
     <figure id="squaring-a-number">
             <figcaption>Squaring a Number</figcaption>
-            <img src="img/squaring-a-number.jpg" alt="Squaring a Number" onclick="runProject(squaringANumber)">
+            <img src="img/squaring-a-number.jpg" alt="Squaring a Number" onclick="runChallenge(squaringANumber)">
     </figure>
     <figure id="string-to-object">
         <figcaption>String to Object</figcaption>
-        <img src="img/string-to-object.jpg" alt="String to Object" onclick="runProject(stringToObject)">
+        <img src="img/string-to-object.jpg" alt="String to Object" onclick="runChallenge(stringToObject)">
        </figure>
 
     <figure id="sum-of-elements">
         <figcaption>Sum of Elements</figcaption>
-    <img src="img/sum-of-elements.jpg" alt="Sum of Elements" onclick="runProject(sumOfElements)">
+    <img src="img/sum-of-elements.jpg" alt="Sum of Elements" onclick="runChallenge(sumOfElements)">
     </figure>
 
     <figure id="sum-of-positive">
         <figcaption>Sum of Positive</figcaption>
-        <img src="img/sum-of-positive.jpg" alt="Sum of Positive" onclick="runProject(sumOfPositive)">
+        <img src="img/sum-of-positive.jpg" alt="Sum of Positive" onclick="runChallenge(sumOfPositive)">
     </figure>
 
     <figure id="sum-of-two-numbers">
         <figcaption>Sum of Two Numbers</figcaption>
-    <img src="img/sum-of-two-numbers.jpg" alt="Sum of Two Numbers" onclick="runProject(sumOfTwoNumbers)">
+    <img src="img/sum-of-two-numbers.jpg" alt="Sum of Two Numbers" onclick="runChallenge(sumOfTwoNumbers)">
     </figure>
 </div>
 
