--- a/project-gallery.html
+++ b/project-gallery.html
@@ -22,29 +22,30 @@ Please note: The tip calculator and lolcat clock were previous practice projects
 <br>
 <div id="container">
     <figure id="passwordCreator">
-        <figcaption>DOM Manipulation</figcaption>
+        <figcaption>DOM Manipulation: <a href="https://github.com/KesterJJ/password-creator" target="_blank">https://github.com/KesterJJ/password-creator</a></figcaption>
         <img src="img/passwordcreator.jpg" alt="Password Creator" onclick="runProject(passwordCreator, passW, passWURL)" id="passW">
        </figure>
 
     <figure id="numberizor">
-        <figcaption>Arrays and Array Methods</figcaption>
+        <figcaption>Arrays and Array Methods: <a href="https://github.com/KesterJJ/numberizor" target="_blank">https://github.com/KesterJJ/numberizor</a></figcaption>
     <img src="img/numberizor.jpg" alt="Filter or Reduce" onclick="runProject(numberizor, numB, numBURL)" id="numB">
     </figure>
 
     <figure id="tipCalculator">
-        <figcaption>Tip Calculator</figcaption>
+        <figcaption>Tip Calculator: <a href="https://github.com/KesterJJ/tip-calculator" target="_blank">https://github.com/KesterJJ/tip-calculator</a></figcaption>
         <img src="img/tipcalculator.jpg" alt="Tip Calculator" onclick="runProject(tipCalculator, tipC, tipCURL)" id="tipC">
     </figure>
 
     <figure id="lolCat">
-        <figcaption>Lolcat Clock</figcaption>
+        <figcaption>Lolcat Clock: <a href="https://github.com/KesterJJ/lolcat-clock" target="_blank">https://github.com/KesterJJ/lolcat-clock</a></figcaption>
     <img src="img/Lolcat.png" alt="Lolcat Clock" onclick="runProject(lolCat, lolC, lolCURL)" id="lolC">
     </figure>
     
     <figure id="burlyHerd">
-        <a href="https://kesterjj.github.io/burly-herd/" target="_blank">
-            <figcaption>Band Website</figcaption>
-            <img src="img/burlyherd.jpg" alt="Burly Herd"></a>
+        
+            <figcaption>Band Website: <a href="https://github.com/KesterJJ/burly-herd" target="_blank">https://github.com/KesterJJ/burly-herd</a></figcaption>
+            <a href="https://kesterjj.github.io/burly-herd/" target="_blank">
+                <img src="img/burlyherd.jpg" alt="Burly Herd"></a>
     </figure>
 </div>
 <!--<img src="" alt="Hello User">
